# tmuxp-starter

./: .editorconfig  .gitignore  Pipfile  README.md  pyproject.toml  setup.py  txp-completion.sh
tmuxp_starter/: cli.py
